--- a/app/src/main/res/layout/activity_simple.xml
+++ b/app/src/main/res/layout/activity_simple.xml
@@ -193,7 +193,7 @@ android:layout_height="match_parent">
 
             <Button
                 android:id="@+id/button_three"
-                android:layout_width="98dp"
+                android:layout_width="76dp"
                 android:layout_height="match_parent"
                 android:onClick="onClick"
                 android:text="3" />
@@ -230,12 +230,12 @@ android:layout_height="match_parent">
                 android:text="." />
 
             <Button
-                android:id="@+id/button_percent"
+                android:id="@+id/button_un_divide"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="onClick"
-                android:text="%" />
+                android:text="+/-" />
 
             <Button
                 android:id="@+id/button_equally"
