--- a/app/src/main/res/menu/menu_activity.xml
+++ b/app/src/main/res/menu/menu_activity.xml
@@ -8,7 +8,11 @@
         app:showAsAction="never" />
     <item
         android:id="@+id/action_change_theme"
-        android:orderInCategory="100"
+        android:orderInCategory="1"
         android:title="@string/change_theme"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_feedback"
+        android:orderInCategory="2"
+        android:title="@string/feedBack" />
 </menu>
