--- a/app/src/main/res/values-notnight/colors.xml
+++ b/app/src/main/res/values-notnight/colors.xml
@@ -7,4 +7,5 @@
     <color name="color_expression">#263238</color>
     <color name="colorBackground">#FAFAFA</color>
     <color name="hint_text">#263238</color>
+    <color name="text">#404040</color>
 </resources>
