--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:text="@string/text_view"
             android:textSize="17sp"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/text"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="2dp" />
 
